[package]
name = "hanower"
version = "0.2.3"
authors = ["Bazaah <github@luxolus.com>", "emucc <github@elrimer.com>", "psox <github@st8l.com>"]
edition = "2018"
license = "MPL-2.0"
description = "WIP⚠️ CLI which calculates logarithmic or exponential backoffs from user input values"
repository = "https://github.com/dolysis/hanower"
documentation = "https://docs.rs/hanower"
readme = "docs/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
color-eyre = { version = "0.5", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "hanower"
