[package]
name = "hanoi-cli"
version = "0.1.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
color-eyre = { version = "0.5", default-features = false }

core = { version = "0.2", path = "../core", package = "hanoi" }

[[bin]]
path = "src/main.rs"
name = "hanoi"
