[package]
name = "hanower-cli"
version = "0.1.1"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
color-eyre = { version = "0.5", default-features = false }

core = { version = "0.2.1", path = "../core", package = "hanower" }

[[bin]]
path = "src/main.rs"
name = "hanower"
