[package]
name = "hanower-cli"
version = "0.1.1"
authors = ["Bazaah <github@luxolus.com>", "emucc <github@elrimer.com>"]
edition = "2018"
license = "MPL_2_0"
description = "CLI which calculates logarithmic or exponential backoffs from user input values"
repository = "https://github.com/dolysis/hanower"
documentation = "https://docs.rs/hanower"
readme = "docs/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
color-eyre = { version = "0.5", default-features = false }

core = { version = "0.2.1", path = "../core", package = "hanower" }

[[bin]]
path = "src/main.rs"
name = "hanower"
