[package]
name = "hanower"
version = "0.2.1"
authors = ["Bazaah <github@luxolus.com>", "emucc <github@elrimer.com>"]
edition = "2018"
license = "MPL_2_0"
description = "CLI which calculates logarithmic or exponential backoffs from user input values"
repository = "https://github.com/dolysis/hanower"
documentation = "https://docs.rs/hanower"
readme = "docs/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0"
